refactor auth server to add cookie-based refresh
