# auth-service/server/auth_server/functions/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  authAPI.yaml
-#   timestamp: 2021-02-07T13:01:36+00:00
+#   timestamp: 2021-02-07T16:40:25+00:00
 
 from __future__ import annotations
 
@@ -9,6 +9,10 @@ from enum import Enum
 from typing import List, Optional
 
 from pydantic import BaseModel, Field
+
+
+class LoginUrl(BaseModel):
+    url: Optional[str] = None
 
 
 class TokenResponse(BaseModel):
@@ -52,11 +56,15 @@ class ApiError(BaseModel):
     message: str
 
 
+class Mode1(Enum):
+    read = 'READ'
+    write = 'WRITE'
+    admin = 'ADMIN'
 
 
 class UserInGroup(BaseModel):
     user_id: Optional[str] = Field(None, alias='userId')
-    mode: Optional[Mode] = None
+    mode: Optional[Mode1] = None
 
 
 class GroupFull(BaseModel):
